--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,7 +36,15 @@ h4{
 p{
     font-family:"Mulish", sans-serif;
 }
+a{
+  color:inherit;
+  text-decoration:none
+}
+a:hover{
+  color:inherit;
+  text-decoration:none
 
+}
 
 
 
