--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -155,22 +155,12 @@ li{
 .headshot:hover{
     transform: translate(10px,10px);
 }
-.headshot-mask{
+.photo-mask{
     position:relative;
     height:auto;
 }
 
-.headshot-mask:before{
-    content:"";
-    position:absolute;
-    top:15px;
-    left:15px;
-    background:transparent;
-    width:100%;
-    height:100%;
-    border:2px solid #8781FE;
-}
-.headshot-mask:after{
+.photo-mask:after{
     content:"";
     position:absolute;
     width:100%;
@@ -182,7 +172,7 @@ li{
     transition:all 0.3s ease;
 }
 
-.headshot-mask:hover:after{
+.photo-mask:hover:after{
     opacity:0;
 }
 
